# gitcontext

./: .cursorrules  .env.example  .gitcontext.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  quickstart.sh  requirements.txt  setup.py
.gitcontext/: .gitignore  index.yaml
.gitcontext/contexts/main/history/commit_49d86ce44dea/: commit.json
.gitgub/workflows/: publish.yaml  tests.yaml
gitcontext/: __init__.py  cli.py  git-context.py  git_integration.py  models.py  ota.py
gitcontext-vscode/: extension.ts  package.json
gitcontext-vscode/src/: commands.ts  extensions.ts  gitcontextClient.ts  treeDataProvider.ts
gitcontext-vscode/src/models/: types.ts
gitcontext-vscode/src/utils/: logger.ts  pathUtils.ts
gitcontext-vscode/src/webview/: CommitView.ts
src/gitcontext/: __init__.py  __main__.py  core.py  llm_integration.py  utils.py
src/gitcontext/cli/: main.py
src/gitcontext/core/: context.py
src/gitcontext/llm/: __init__.py  anthropic.py  deepseek.py  ollama.py  openai.py  provider.py
src/gitcontext/models/: ota.py  types.py
src/gitcontext/storage/: filesystem.py  index.py  serialization.py
src/gitcontext/utils/: config.py  errors.py  logger.py
tests/: conftest.py
tests/unit/: test_models.py  test_storage.py
